--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branch:
+      - master
 
 jobs:
   release:
@@ -16,10 +16,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-
-      - run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Cache dependencies Node
         uses: actions/cache@v3
